--- a/src/components/navBarCenter/index.less
+++ b/src/components/navBarCenter/index.less
@@ -10,5 +10,8 @@
       line-height: 35px;
       color: #666;
       font-size: 12px;
+      .var-swipe__track {
+        transition-duration: .8s !important;
+      }
     }
   }
