--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -12,6 +12,9 @@
           width: 100%;
           height: 100%;
         }
+        .var-swipe__track {
+          transition-duration: .8s !important;
+        }
         .var-swipe__indicator {
           width: 14px;
           height: 3px;
