--- a/src/components/navBarCenter/index.less
+++ b/src/components/navBarCenter/index.less
@@ -8,7 +8,8 @@
       height: 100%;
       text-align: center;
       line-height: 35px;
-      color: #666;
+      // color: #666;
+      color: var(--color-text-disabled);
       font-size: 12px;
     }
   }
