--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -2,8 +2,14 @@
   width: 100%;
   height: 100%;
   .content {
+    .top-area {
+      .var-card {
+        margin-top: 0 !important;
+      }
+    }
+
     .banner {
-      padding: 20px;
+      padding: 15px;
       height: 150px;
       .var-swipe {
         height: 100%;
@@ -28,13 +34,12 @@
       flex-wrap: nowrap;
       align-items: center;
       overflow: hidden;
-      // padding: 0 20px;
+      padding-bottom: 15px;
 
       .scroll_bar {
         display: flex;
         width: auto;
-        padding: 0 20px;
-
+        padding: 0 15px;
       }
       .swiper_recommend {
         width: 90px;
@@ -65,8 +70,8 @@
           }
         }
         img {
-          width:100%;
-          height:90px;
+          width: 100%;
+          height: 90px;
           border-radius: 8px;
           margin-bottom: 4px;
         }
@@ -79,11 +84,37 @@
           white-space: normal !important;
           word-wrap: break-word;
           font-size: 12px;
-          color: #fff;
+          color: var(--color-text);
         }
       }
-      .recommend:last-child{
+      .recommend:last-child {
         margin-right: 0;
+      }
+    }
+
+    .var-card {
+      // height: 120px;
+      border-radius: 4px;
+      margin-top: 15px;
+      .var-card__title {
+        padding-left: 13px;
+        font-size: 12px;
+        padding: 10px;
+        color: var(--color-text);
+        margin: 0;
+      }
+      .music-item {
+        font-size: 12px;
+        margin-bottom: 10px;
+        color: var(--color-text);
+        img {
+          width: 35px;
+          height: 35px;
+          border-radius: 4px;
+        }
+        .song-name {
+          margin-left: 10px;
+        }
       }
     }
   }
