--- a/src/style/global.css
+++ b/src/style/global.css
@@ -11,8 +11,13 @@ body,
 #app {
     width: 100;
     height: 100%;
+    /* font-size: 12px; */
 }
 
 .var-app-bar {
     height: 60px;
+}
+
+:root {
+    --wxy-back: red
 }
