--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -2,9 +2,11 @@
   width: 100%;
   height: 100%;
   .content {
+    overflow: hidden;
     .top-area {
       .var-card {
         margin-top: 0 !important;
+        padding: 0;
       }
     }
 
@@ -96,9 +98,11 @@
       // height: 120px;
       border-radius: 4px;
       margin-top: 15px;
+      margin-bottom: 15px;
+      padding: 16px 0;
       .var-card__title {
         padding-left: 13px;
-        font-size: 12px;
+        font-size: 18px;
         padding: 10px;
         color: var(--color-text);
         margin: 0;
@@ -108,8 +112,8 @@
         margin-bottom: 10px;
         color: var(--color-text);
         img {
-          width: 35px;
-          height: 35px;
+          width: 50px;
+          height: 50px;
           border-radius: 4px;
         }
         .song-name {
